fix flex-alignment for images

--- a/css/contact.css
+++ b/css/contact.css
@@ -40,7 +40,7 @@
     background-color: bisque;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .contact-sections:nth-child(1){
